--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-langchain
+pandas>=2.0.2
+pendulum>=2.1.2
+plotly>=5.15.0
+protobuf>=4.23.4
+requests>=2.31.0
+simplejson>=3.19.1
+snowflake>=0.0.3
+snowflake_snowpark_python>=1.4.0
+streamlit>=1.21.0
+streamlit_extras>=0.2.7
+google-cloud-storage>=2.10.0
+altair<5
+tabulate
+openai
+langchain_community
 langchain_experimental
-pandas
-python-dotenv
-snowflake_connector_python
-snowflake_snowpark_python
-streamlit
+
