--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ requests>=2.31.0
 simplejson>=3.19.1
 snowflake>=0.0.3
 snowflake_snowpark_python==1.5.0
-streamlit==1.21.0
+streamlit>=1.21.0
 streamlit_extras>=0.2.7
 google-cloud-storage>=2.10.0
 altair<5
