--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-imbalanced_learn==0.12.0
-imblearn==0.0
-langchain==0.1.6
-langchain_experimental==0.0.50
-numpy==1.24.4
-pandas==2.0.3
-python-dotenv==1.0.1
-snowflake_connector_python==3.1.1
-snowflake_snowpark_python==1.7.0
-streamlit==1.30.0
+pandas==2.0.2
+pendulum>=2.1.2
+plotly>=5.15.0
+protobuf>=4.23.4
+requests>=2.31.0
+simplejson>=3.19.1
+snowflake>=0.0.3
+snowflake_snowpark_python==1.5.0
+streamlit>=1.21.0
+streamlit_extras>=0.2.7
+google-cloud-storage>=2.10.0
+altair<5
+tabulate
+openai
+langchain_community
+langchain_experimental
+scikit-learn==1.3.0
+imbalanced_learn
+imblearn
+numpy
+
+
